fixed your bs + add some useful stuff for swagger
